[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata ──────────────────────────────────────────────────────────

[project]
name        = "securearmor"
version     = "3.0.0"
description = "Password Strength Analyser — evaluate password security with multiple criteria"
readme      = "README.md"
license     = {text = "MIT"}
authors = [
    {name = "Rakka Evandra Razaan", email = "rakkaevandra@gmail.com"}
]
maintainers = [
    {name = "Rakka Evandra Razaan", email = "rakkaevandra@gmail.com"}
]

keywords = [
    "password", "security", "strength", "analyzer", "cli", "evaluate", "criteria"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

# ── Runtime dependencies ──────────────────────────────────────────────────────

dependencies = [
    "click>=8.0.0",
    "colorama>=0.4.4",
]

# ── Optional dependency groups ────────────────────────────────────────────────

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "build>=0.10.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
lint = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage      = "https://github.com/RakkaEvandra06/passcheck"
Documentation = "https://github.com/RakkaEvandra06/passcheck#readme"
Repository    = "https://github.com/RakkaEvandra06/passcheck"
Issues        = "https://github.com/RakkaEvandra06/passcheck/issues"

# ── Entry points ──────────────────────────────────────────────────────────────

[project.scripts]
passcheck = "passcheck.cli:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["passcheck*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
passcheck = ["py.typed"]

[tool.black]
line-length    = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include        = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile                        = "black"
line_length                    = 88
multi_line_output              = 3
include_trailing_comma         = true
force_grid_wrap                = 0
use_parentheses                = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore   = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.mypy]
python_version          = "3.8"
warn_return_any         = true
warn_unused_configs     = true
disallow_untyped_defs   = true
disallow_any_unimported = true
no_implicit_optional    = true
warn_redundant_casts    = true
warn_unused_ignores     = true
warn_no_return          = true
warn_unreachable        = true
strict_equality         = true
check_untyped_defs      = true
show_error_codes        = true

[[tool.mypy.overrides]]
module                  = ["colorama", "colorama.*"]
ignore_missing_imports  = true

[tool.pytest.ini_options]
minversion       = "7.0"
testpaths        = ["tests"]
python_files     = ["test_*.py", "*_test.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=passcheck",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: unit tests",
    "integration: integration tests",
]

[tool.coverage.run]
source = ["passcheck"]
omit   = ["tests/*", "*/__pycache__/*", "*/test_*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
fail_under   = 80

[tool.build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Optional: Add bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skids        = ["B101", "B311", "B403"]
severity     = "medium"
confidence   = "medium"

# Optional: Add safety checker configuration
[tool.safety]
ignore = ["12345"]  # Add any specific vulnerability IDs to ignore if needed